--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@
     
      font-family: Arial, Helvetica, sans-serif;
      background-color: rosybrown;
+     text-align: center;
  }
 
- .master-div-style {
+ /* .master-div-style {
      background-color: seashell;
      max-width: 900px;
      margin: auto;
@@ -12,15 +13,13 @@
      border-radius: 10px;
      line-height: 1.5rem;
      border: 3px solid rosybrown;
-     border-radius: 3px;
+     border-radius: 3px; */
 
- }
 
- input {
-     width: 200px;
-     padding: 3px;
-     margin: 5px;
-
+ #survey-form {
+    background-color:rgb(151, 76, 226);
+    margin: 0 auto;
+    
  }
 
   
