--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,29 @@
 
  #survey-form {
     background-color:rgb(151, 76, 226);
-    margin: 0 auto;
+    max-width: 800px;
+    margin: auto;
+
     
  }
 
+ labels, input {
+     padding: 5px;
+     margin: 10px;
+ }
+
+
+ input[type="text"],
+ input[type="email"],
+ input[type="number"] {
+     width: 50%;
+     padding: 5px;
+     font-size: 1rem;
+     border: 2px solid pink;
+     border-radius: 5%;
+ }
   
+
+ #drop-down {
+     width:80%;
+ }
