--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,37 @@
- body { 
-    
-     font-family: Arial, Helvetica, sans-serif;
-     background-color: rgb(236, 227, 227);
-     text-align: center;
- }
+body {
+    text-align: center;
+    background-color: powderblue;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
- /* .master-div-style {
-     background-color: seashell;
-     max-width: 900px;
-     margin: auto;
-     padding: 20px 10px 10px 10px;
-     border-radius: 10px;
-     line-height: 1.5rem;
-     border: 3px solid rosybrown;
-     border-radius: 3px; */
+h1 {
+    font-size: 4rem;
+}
 
+P {
+    font-size: 1rem;
+}
 
- #survey-form {
-    background-color:rgb(116, 163, 224);
-    max-width: 800px;
+.top-form {
+    background-color:rgb(15, 114, 114);
+    padding: 20px 10px 10px 10px;
+    border-radius: 8px;
     margin: auto;
+    width: 900px;
+}
 
-    
- }
+.labels {
+    display: inline-block;
+    text-align: right;
+    width: 40%;
+}
 
- labels, input {
-     padding: 5px;
-     margin: 10px;
- }
-
-
- input[type="text"],
- input[type="email"],
- input[type="number"] {
-     width: 50%;
-     padding: 5px;
-     font-size: 1rem;
-     border: 2px solid pink;
-     border-radius: 5%;
- }
+.fields {
+    display: inline-block;
+    text-align: left;
+    width: 50%;
+  
+}
   
 
- #drop-down {
-     width:80%;
- }
+  
